--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "YOUR-PROJECT-NAME-HERE",
-  "description": "YOUR PROJECT DESCRIPTION HERE",
-  "author": "YOUR NAME <your@emailaddress.com>",
-  "version": "0.0.1",
-  "dependencies": {
-    "connect": "1.8.5",
-    "express": "2.5.2",
-    "jade": "0.20.0",
-    "mongoose": "2.4.8",
-    "socket.io": "0.8.7"
-  },
-  "devDependencies": {
-    "vows": "0.5.x",
-	"mocha": "*",
-	"should": "*"
-  },
-  "engine": "node >= 0.6.6"
+    "name": "esp_web_app",
+    "description": "Web Application for Managing Environmental Sampling Processors",
+    "author": "Kevin Gomes <kgomes@mbari.org>",
+    "version": "0.0.1",
+    "dependencies": {
+        "connect": "1.8.5",
+        "express": "2.5.2",
+        "socket.io": "0.8.7",
+        "ftp":"0.3.1",
+        "cradle": "0.6.5",
+        "lazy": "1.0.11",
+        "moment":"2.0.0",
+        "log4js":"0.6.4",
+        "pg":"1.1.0",
+        "imagemagick":"0.1.3"
+    },
+    "devDependencies": {
+        "vows": "0.5.x",
+        "mocha": "*",
+        "should": "*"
+    },
+    "engine": "node >= 0.6.6"
 }
