--- a/server/package.json
+++ b/server/package.json
@@ -3,17 +3,23 @@
     "description": "Web Application for Managing Environmental Sampling Processors",
     "author": "Kevin Gomes <kgomes@mbari.org>",
     "version": "0.0.1",
+    "scripts": {
+        "start": "node_modules/.bin/supervisor server.js"
+    },
     "dependencies": {
+        "supervisor": "0.5.3",
         "connect": "1.8.5",
         "express": "2.5.2",
         "socket.io": "0.8.7",
-        "ftp":"0.3.1",
+        "passport": "0.1.17",
+        "passport-google": "0.3.0",
+        "ftp": "0.3.1",
         "cradle": "0.6.5",
         "lazy": "1.0.11",
-        "moment":"2.0.0",
-        "log4js":"0.6.4",
-        "pg":"1.1.0",
-        "imagemagick":"0.1.3"
+        "moment": "2.0.0",
+        "log4js": "0.6.4",
+        "pg": "1.1.0",
+        "imagemagick": "0.1.3"
     },
     "devDependencies": {
         "vows": "0.5.x",
