--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
         "moment": "2.0.0",
         "log4js": "0.6.4",
         "pg": "1.1.0",
-        "imagemagick": "0.1.3"
+        "imagemagick": "0.1.3",
+        "forever-monitor":"1.2.2"
     },
     "devDependencies": {
         "vows": "0.5.x",
