--- a/server/config.js.template
+++ b/server/config.js.template
@@ -56,7 +56,7 @@ module.exports = {
     },
 
     // The options for the FTPSync class
-    ftpSyncOptions: {
+    deploymentFileSyncOptions: {
         loggerLevel: 'info'
     },
 
