--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
         "passport": "0.1.17",
         "passport-google": "0.3.0",
         "ftp": "0.3.1",
+        "jsftp" : "1.1.1",
         "cradle": "0.6.5",
         "lazy": "1.0.11",
         "moment": "2.0.0",
