--- a/server/config.js.template
+++ b/server/config.js.template
@@ -127,6 +127,16 @@ module.exports = {
                     varName: 'Diss O2',
                     varLongName: 'Computed Dissolved Oxygen',
                     units: 'ml/L'
+                },
+                'decibars': {
+                    varName: 'Press',
+                    varLongName: 'Pressure',
+                    units: 'decibars'
+                },
+                'S/m': {
+                    varName: 'Cond',
+                    varLongName: 'Conductivity',
+                    units: 'S/m'
                 }
             },
             Can: {
