--- a/server/config.js.template
+++ b/server/config.js.template
@@ -174,6 +174,11 @@ module.exports = {
                     varName: 'Power',
                     varLongName: 'Power',
                     units: 'W'
+                },
+                '% flow': {
+                    varName: '% Flow',
+                    varLongName: 'Percent Flow',
+                    units: '%'
                 }
             },
             ISUS: {
@@ -182,10 +187,30 @@ module.exports = {
                     varLongName: 'Nitrate',
                     units: 'uM/L no^3'
                 },
+                'uM/L no3': {
+                    varName: 'Nitrate',
+                    varLongName: 'Nitrate',
+                    units: 'uM/L no3'
+                },
+                'uM no^3': {
+                    varName: 'Nitrate',
+                    varLongName: 'Nitrate',
+                    units: 'uM no^3'
+                },
+                'uM no3': {
+                    varName: 'Nitrate',
+                    varLongName: 'Nitrate',
+                    units: 'uM no3'
+                },
                 'uM/L hs': {
                     varName: 'Nitrate 2',
                     varLongName: 'Nitrate 2',
                     units: 'uM/L hs'
+                },
+                'uM hs': {
+                    varName: 'Nitrate 2',
+                    varLongName: 'Nitrate 2',
+                    units: 'uM hs'
                 },
                 'psu': {
                     varName: 'PSU',
@@ -203,6 +228,18 @@ module.exports = {
                     varName: 'PSU',
                     varLongName: 'PSU',
                     units: 'psu'
+                }
+            },
+            SUNA: {
+                'uM': {
+                    varName: 'Nitrate',
+                    varLongName: 'Nitrate',
+                    units: 'uM'
+                },
+                'psu': {
+                    varName: 'Salinity',
+                    varLongName: 'Salinity',
+                    units: ''
                 }
             }
         }
