--- a/server/package.json
+++ b/server/package.json
@@ -7,22 +7,23 @@
     "start": "node_modules/.bin/supervisor server.js"
   },
   "dependencies": {
-    "supervisor": "0.5.3",
     "connect": "1.8.5",
+    "cradle": "0.6.5",
     "express": "2.5.2",
     "express-csv": "0.6.0",
-    "socket.io": "0.8.7",
+    "forever-monitor": "1.2.2",
+    "ftp": "0.3.1",
+    "imagemagick": "0.1.3",
+    "jsftp": "1.1.1",
+    "lazy": "1.0.11",
+    "log4js": "0.6.4",
+    "moment": "2.0.0",
+    "node-slackr": "^0.1.0",
     "passport": "0.1.17",
     "passport-google": "0.3.0",
-    "ftp": "0.3.1",
-    "jsftp": "1.1.1",
-    "cradle": "0.6.5",
-    "lazy": "1.0.11",
-    "moment": "2.0.0",
-    "log4js": "0.6.4",
     "pg": "1.1.0",
-    "imagemagick": "0.1.3",
-    "forever-monitor": "1.2.2"
+    "socket.io": "0.8.7",
+    "supervisor": "0.5.3"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
