Some doc changes

--- a/server/config.js.template
+++ b/server/config.js.template
@@ -47,14 +47,14 @@ module.exports = {
         couchHost: 'localhost',
         couchPort: 5984,
         couchSSL: false,
-        couchUsername: 'espdba',
-        couchPassword: 'leghorn',
+        couchUsername: 'xxxxxx',
+        couchPassword: 'yyyyyy',
         couchDatabase: 'esp',
         pgProtocol: 'postgres',
         pgHost: 'localhost',
         pgPort: 5432,
-        pgUsername: 'espdba',
-        pgPassword: 'leghorn',
+        pgUsername: 'xxxxxx',
+        pgPassword: 'yyyyyy',
         pgDatabase: 'esp_ancillary',
         loggerLevel: 'info',
         numAncillaryPointsToBatch: 1000
