--- a/app/bower.json
+++ b/app/bower.json
@@ -29,6 +29,7 @@
     "respond": "~1.4.2",
     "date.format": "~1.2.3",
     "highstock-release": "1.3.10",
-    "angular-bootstrap": "0.6.0"
+    "angular-bootstrap": "0.6.0",
+    "jquery-ui-touch-punch": "*"
   }
 }
