--- a/espmob/bower.json
+++ b/espmob/bower.json
@@ -5,6 +5,6 @@
     "ionic": "driftyco/ionic-bower#1.0.0-rc.5"
   },
   "dependencies": {
-    "openlayers3": "~3.0.0"
+    "openlayers3.5": "v3.5.0"
   }
 }
