Changes to start integration of Mongo

--- a/server/package.json
+++ b/server/package.json
@@ -7,29 +7,42 @@
     "start": "node_modules/.bin/supervisor server.js"
   },
   "dependencies": {
-    "connect": "1.8.5",
-    "cradle": "0.6.5",
-    "express": "2.5.2",
-    "express-csv": "0.6.0",
-    "forever-monitor": "1.2.2",
-    "ftp": "0.3.1",
-    "imagemagick": "0.1.3",
-    "jsftp": "1.1.1",
-    "lazy": "1.0.11",
-    "log4js": "0.6.4",
-    "moment": "2.0.0",
-    "node-slackr": "^0.1.0",
-    "passport": "0.1.17",
-    "passport-google": "0.3.0",
-    "pg": "1.1.0",
-    "socket.io": "0.8.7",
-    "supervisor": "0.5.3"
+    "body-parser": "^1.15.1",
+    "connect": "^3.4.1",
+    "cradle": "^0.7.1",
+    "errorhandler": "^1.4.3",
+    "express": "*",
+    "express-csv": "*",
+    "express-jwt": "*",
+    "express-session": "^1.13.0",
+    "forever-monitor": "^1.7.0",
+    "ftp": "^0.3.10",
+    "grunt": "^1.0.1",
+    "imagemagick": "*",
+    "jsftp": "^1.5.3",
+    "lazy": "*",
+    "log4js": "^0.6.37",
+    "method-override": "^2.3.6",
+    "mocha": "*",
+    "moment": "^2.13.0",
+    "mongoose": "*",
+    "morgan": "^1.7.0",
+    "multer": "^1.1.0",
+    "node-slackr": "*",
+    "passport": "^0.3.2",
+    "passport-google": "*",
+    "pg": "^5.1.0",
+    "serve-favicon": "^2.3.0",
+    "should": "*",
+    "socket.io": "^1.4.6",
+    "supervisor": "^0.11.0",
+    "vows": "^0.8.1"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
+    "grunt": "*",
     "mocha": "*",
     "should": "*",
-    "vows": "0.5.x"
+    "vows": "*"
   },
   "engine": "node >= 0.6.6"
 }
