--- a/app/bower.json
+++ b/app/bower.json
@@ -22,7 +22,7 @@
     "bootstrap": "~3.3.2",
     "jquery-ui": "~1.11.3",
     "fontawesome": "~4.3.0",
-    "angular": "~1.3.13",
+    "angular": "~1.5.6",
     "jqueryuibootstrap": "*",
     "glfx-bower": "*",
     "html5shiv": "~3.7.2",
@@ -30,6 +30,12 @@
     "date.format": "~1.2.3",
     "highstock-release": "2.1.5",
     "angular-bootstrap": "0.6.0",
-    "jquery-ui-touch-punch": "*"
+    "jquery-ui-touch-punch": "*",
+    "auth0-lock": "^9.2.1",
+    "a0-angular-storage": "^0.0.15",
+    "auth0-angular": "^4.2.3",
+    "angular-jwt": "^0.0.9",
+    "angular-cookies": "^1.5.6",
+    "angular-route": "^1.5.6"
   }
 }
