--- a/server/package.json
+++ b/server/package.json
@@ -7,22 +7,22 @@
     "start": "node_modules/.bin/supervisor server.js"
   },
   "dependencies": {
-    "connect": "1.8.5",
-    "cradle": "0.6.5",
-    "express": "2.5.2",
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "cradle": "^0.7.1",
+    "express": "^4.16.3",
     "express-csv": "0.6.0",
-    "forever-monitor": "1.2.2",
+    "forever-monitor": "^1.7.1",
     "ftp": "0.3.1",
     "imagemagick": "0.1.3",
     "jsftp": "1.1.1",
     "lazy": "1.0.11",
     "log4js": "0.6.4",
-    "moment": "2.0.0",
+    "moment": "^2.22.2",
     "node-slackr": "^0.1.0",
     "passport": "0.1.17",
     "passport-google": "0.3.0",
-    "pg": "1.1.0",
-    "socket.io": "0.8.7",
+    "pg": "^7.4.3",
     "supervisor": "0.5.3"
   },
   "devDependencies": {
