--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,7 @@
     "cookie-parser": "^1.4.3",
     "cradle": "^0.7.1",
     "express": "^4.16.3",
-    "express-csv": "0.6.0",
+    "express-csv": "^0.6.0",
     "forever-monitor": "^1.7.1",
     "ftp": "0.3.1",
     "imagemagick": "0.1.3",
