--- a/app/package.json
+++ b/app/package.json
@@ -13,15 +13,17 @@
   "author": "Kevin Gomes (kgomes@mbari.org)",
   "license": "MIT",
   "dependencies": {
-    "angular": "^1.3.13",
-    "angular-bootstrap": "^0.12.2",
-    "bootstrap": "^3.3.2",
+    "angular": "^1.7.5",
+    "angular-ui": "^1.0.0",
+    "angular-ui-bootstrap": "^2.5.6",
+    "bootstrap": "^3.3.7",
     "date.format": "^1.1.2",
     "font-awesome": "^4.3.0",
     "glfx": "0.0.4",
     "highstock-release": "^6.0.4",
     "html5shiv": "^3.7.3",
-    "jquery": "^1.11.3",
+    "jquery": "^3.1.0",
+    "jquery-ui-bootstrap": "^1.0.0",
     "jquery-ui-dist": "^1.12.1",
     "respond": "^0.9.0"
   }
