--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,7 +77,7 @@ services:
 
     # Define the build file
     build:
-      context: ./core
+      context: ./services/esp-core
       args:
         ESP_NAME: chris
         ESP_MODE: real
@@ -122,26 +122,3 @@ services:
 
     # Give the container a name
     container_name: esp-ia-service
-
-  # Now run the ESP web portal
-#  web-portal:
-    # Declare the file to read the environment variables from
-#    env_file: .env
-
-    # Define the build file
-#    build: .
-
-    # Expose HTTP port outside
-#    ports:
-#    - "8081:8081"
-
-    # The volumes to mount for the core service.  If you want to mount the working directory over the added directory
-    # (usually for development purposes), you can uncomment the second volume, just make sure you run 'npm install' on
-    # the host machine as well as 'bower install' in the app directory on the host machine.
-#    volumes:
-#    - "${ESP_APPS_BASEDIR_HOST}:${ESP_APPS_BASEDIR}"
-##    - ".:/opt/esp"
-
-    # Give the container a name
-#    container_name: esp-web-portal
-
