Updated README and env.template to fix an omission

--- a/env.template
+++ b/env.template
@@ -4,8 +4,10 @@
 # the various services.  It is NOT used inside the container
 ESP_APPS_BASEDIR_HOST=
 
-# This is the directory inside the docker container (or local to the environment running the web portal) where all the
-# various services will keep their data and log files.
+# This is the directory where all the various services will keep their data and log files.  Depending on how the web portal
+# is run, this will either point to the same directory as ESP_APPS_BASEDIR_HOST (if running the web portal on a local machine
+# using Node directly) or the directory inside the Docker container where the host data directory is mount (if running the
+# web portal inside a Docker container, which is the default of /data)
 ESP_APPS_BASEDIR=/data
 
 # This specifies the base portion of the server URL where the application can be found
